styles/utils.module.css
.heading2Xl {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 800;
  letter-spacing: -0.05rem;
  margin-top: 0.7rem;
  margin-bottom: 1rem;
  color: #222222;
}

.NameCss {
  font-size: 2.5rem;
  letter-spacing: -0.03rem;
  font-weight: 800;
  margin-top: 0px;
  margin-bottom: 5px;
  margin-left: 0px;
  margin-right: 0px;
}

.projectsContainer {
  display: flex;
  flex-wrap: wrap;
}

.projectCard {
  width: auto;
  padding: 0px 10px;
  overflow-wrap: break-word;
}

.projectCard h2 {
  font-size: 1.5rem;
  overflow-wrap: break-word;
  margin-bottom: 0.5rem;
}

.projectCard p {
  font-size: 1rem;
  overflow-wrap: break-word;
  color: #333;
}

.headingXl {
  font-size: 2.5rem;
  line-height: 1.3;
  font-weight: 800;
  letter-spacing: -0.05rem;
  color: #222222;
  margin: 1rem 0;
}

.headingPostTitle {
  color: #222222;
  font-size: 2.5rem;
  line-height: 1;
  font-weight: 800;
  letter-spacing: -0.05rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-right: 0rem;
  padding-left: 0rem;
}

.headingPostTitleId {
  color: #222222;
  font-size: 2.5rem;
  line-height: 1;
  font-weight: 800;
  letter-spacing: -0.05rem;
}

.headingProjects {
  color: #222222;
  font-size: 1.5rem;
  line-height: 1.3;
  font-weight: 700;
  margin-top: 10px;
  margin-bottom: 12px;
  margin-right: 0px;
  margin-left: 0px;
  letter-spacing: -0.05rem;
}

.headingAbout {
  font-weight: 500;
  font-size: 2rem;
  margin-bottom: 0px;
  margin-top: -1.8rem;
}

.headingLg {
  font-weight: 500;
  font-size: 2rem;
  line-height: 1.4;
  margin: 0px 0px;
}

.headingMd {
  font-size: 1.6rem;
  line-height: 1.5;
}

.headingDd {
  font-size: 1.2rem;
  line-height: 1.5;
  font-weight: bold;
}

.borderCircle {
  width: 20%;
  height: 20%;
  margin: 0px 0px;
}

.quote {
  font-style: italic;
  font-weight: 400;
  font-size: 0.82rem;
  color: #333;
  margin-top: 2px;
  text-align: center;
}

.colorInherit {
  color: inherit;
}

.padding1px {
  padding-top: 1px;
}

.list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.link {
  margin-left: 20px;
}

.listItem {
  margin: 0 0 1.25rem;
}

.lightText {
  color: #666;
  margin-top: -5px;
}

.introSection {
  border: 1px solid #141d26;
  padding-top: 2rem;
  padding-left: 1.3rem;
  padding-right: 1.3rem;
  padding-bottom: 1rem;
  background-color: #fbf8fd;
  border-radius: 8px;
}

.PostSection {
  border: 1px solid #141d26;
  padding-top: 1.8rem;
  padding-left: 1.3rem;
  padding-right: 1.3rem;
  padding-bottom: 1.5rem;
  background-color: #fbf8fd;
  border-radius: 8px;
}

.introSectionAllPosts {
  padding-top: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: .6rem;
  background-color: #FBF8FD;
  border-radius: 8px;
  outline: 1px solid #141d26
}

.introText {
  margin: 0px 0px;
  font-size: 1.4rem;
  line-height: 1.2;
  text-align: justify;
  text-justify: inter-word;
}

.socialLinks {
  margin: 0px 0px;
  font-size: 25px;
}

.showlinksBorderContainer {
  display: flex;
  align-items: center;
}

.showlinksBorder {
  font-weight: 500;
  font-size: 25px;
  border: 2px solid #141d26;
  padding: 0px 8px;
  border-radius: 5px;
  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
  text-align: center;
  width: auto;
  background-color: transparent;
  color: #141d26;
  text-decoration: none;
  display: inline-block;
}

.showlinksBorder:hover {
  color: #fff;
  background-color: #141d26;
  border-color: #141d26;
}

.showlinksBorder:focus {
  outline: none;
}

.link {
  display: inline-block;
  margin-right: 20px;
  color: #0070f3;
  text-decoration: none;
}

.link:hover {
  text-decoration: underline;
}

.postList {
  list-style: none;
  padding: 0;
}

.postItem {
  margin-bottom: 0px;
}

.postLink {
  text-decoration: none;
  color: #333;
  font-weight: 600;
}

.postLinkH1 {
  color: #333;
  text-decoration: none;
}

.postLink:hover {
  text-decoration: underline;
}

.postDate {
  color: #666;
}

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
  font-size: 1rem;
}

.content {
  font-size: 1.2rem;
  line-height: 1.6;
  color: #333;
}

.content h1 {
  font-weight: 700;
}

.content hr {
  margin-top: 10px;
  margin-bottom: 8px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #CCCCCC;
  border-width: 2px;
  border-style: dashed;
}

.content blockquote {
  border-color: #CCC;
  border-width: 2px;
  border-style: dashed;
  border-left: 4px solid #333;
  padding: 1em;
  margin: 0.5em 0;
  background-color: #f9f9f9;
}

.content blockquote p {
  margin: 0;
  font-style: italic;
  color: #555;
}

.content blockquote footer {
  margin-top: 0.5em;
  text-align: right;
  font-size: 0.9em;
  color: #777;
}

.content a {
  color: #0074d9;
}

.latestPostContainer {
  margin: 0px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.showAllLink {
  text-decoration: none;
  color: #141d26;
  font-weight: 500;
  font-size: 20px;
  border: 2px solid #141d26;
  padding: 0px 8px;
  border-radius: 5px;
  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
  display: inline-block;
  text-align: center;
  width: auto;
  background-color: transparent;
}

.showAllLink:hover {
  color: #fff;
  background-color: #141d26;
  border-color: #141d26;
}

.showAllLink:focus {
  outline: none;
}

.iconTextLight {
  display: flex;
  align-items: center;
  font-weight: bold;
  border: 2px solid transparent;
  padding: 0px 8px;
  transition-delay: 100ms;
  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
  border-radius: 5px;
  text-align: center;
  width: auto;
  color: #211a1a;
}

.iconTextLight:hover {
  background-color: #b297a4;
  border-color: #b297a4;
}

.iconTextLight:focus {
  outline: none;
}

.iconText {
  display: flex;
  align-items: center;
  font-weight: bold;
  border: 2px solid transparent;
  padding: 0px 8px;
  transition-delay: 100ms;
  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
  border-radius: 5px;
  text-align: center;
  width: auto;
}

.iconText:hover {
  background-color: #394859;
  border-color: #394859;
}

.iconText:focus {
  outline: none;
}

.icon {
  font-weight: lighpaddingt;
  margin-top: 2px;
  margin-right: 5px;
}

.headingAllPosts {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.SoftBorderAroundAbout {
  padding: 0px 8px;
  border-radius: 5px;
  width: auto;
  background-color: #f0f0f0;
  text-decoration: none;
}

.SoftBorderAroundLatestPost {
  padding: 0px 8px;
  border: 2px solid #ccc;
  border-radius: 5px;
  width: auto;
  background-color: #fbf8fd;
  text-decoration: none;
  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.SoftBorderAroundLatestPost:hover {
  transform: scale(1.02);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.ProjectsBox {
  flex-grow: 1;
  justify-content: center;
  text-decoration: none;
  border: 2px solid #ccc;
  border-radius: 8px;
  margin: 0px 2px 4px 2px;
  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.ProjectsBox:hover {
  transform: scale(1.02);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.SoftBorderAroundAllPost {
  margin-bottom: 10px;
  border: 2px solid #ccc;
  padding: 0px 8px;
  border-radius: 5px;
  width: auto;
  background-color: #FBF8FD;
  text-decoration: none;
  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.SoftBorderAroundAllPost:hover {
  transform: scale(1.02);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.backsvg {
  position: fixed;
  pointer-events: none;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: block;
  background-color: #0e1a40;
  background-image: #0e1a40;
  z-index: -100;
}

@media (max-width: 767px) {
  .footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center;
    font-size: 1rem;
  }

  .SoftBorderAroundLatestPost {
    border: 1px solid #282a36;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #fbf8fd;
    text-decoration: none;
    transition: background-color 0.05s, color 0.05s, border-color 0.05s;
  }

  .SoftBorderAroundAbout {
    border: 2px dashed #282a36;
    padding: 10px 16px;
    line-height: 1.2;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
  }

  .NameCss {
    font-size: 2.5rem;
    letter-spacing: -0.05rem;
    font-weight: 800;
    margin-top: 15px;
    margin-bottom: 19px;
    margin-left: 0px;
    margin-right: 0px;
  }

  .showlinksBorderContainer {
    display: block;
  }

  .showlinksBorder {
    font-weight: 500;
    font-size: 20px;
    border: 2px solid #141d26;
    padding: 10px 8px;
    border-radius: 5px;
    transition: background-color 0.05s, color 0.05s, border-color 0.05s;
    text-align: center;
    width: auto;
    background-color: transparent;
    color: #141d26;
    text-decoration: none;
    display: block;
    margin: 5px auto;
  }

  .showlinksBorder:hover {
    color: #fff;
    background-color: #141d26;
    border-color: #141d26;
  }

  .showlinksBorder:focus {
    outline: none;
  }

  .showAllLink {
    margin-top: 2px;
    text-decoration: none;
    color: #141d26;
    font-weight: 500;
    font-size: 20px;
    border: 2px solid #141d26;
    padding: 10px 10px;
    border-radius: 5px;
    transition: background-color 0.05s, color 0.05s, border-color 0.05s;
    display: inline-block;
    text-align: center;
    width: auto;
    background-color: transparent;
  }

  .showAllLink:hover {
    color: #fff;
    background-color: #141d26;
    border-color: #141d26;
  }

  .showAllLink:focus {
    outline: none;
  }

  .lightText {
    color: #666;
    margin-top: 7px;
    margin-bottom: 7px;
  }

  .borderCircle {
    height: 50%;
    width: 50%;
    margin: 0px auto;
  }

  .headingPostTitle {
    color: #222222;
    font-size: 2.5rem;
    line-height: 1;
    font-weight: 800;
    letter-spacing: -0.05rem;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    padding-right: 0rem;
    padding-left: 0rem;
  }

  .headingPostTitleId {
    color: #222222;
    font-size: 2.5rem;
    line-height: 1;
    font-weight: 800;
    letter-spacing: -0.05rem;
  }

  .SoftBorderAroundAbout {
    border: 2px dashed #282a36;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
  }

  .postLink {
    text-decoration: none;
    margin: 10px 0px;
    color: #333;
    font-size: 17px;
    font-weight: 600;
  }

  .introText {
    margin: 0px 0px;
    font-size: 1.4rem;
    line-height: 1.1;
    text-align: justify;
    text-justify: inter-word;
  }

  .headingAbout {
    font-weight: 500;
    font-size: 2rem;
    margin-top: -20px;
    margin-bottom: 10px;
  }

  .headingLg {
    font-weight: 500;
    font-size: 2rem;
    line-height: 1.4;
    margin: 0px 0px;
  }

  .quote {
    font-style: italic;
    font-weight: 400;
    font-size: 1rem;
    color: #333;
    padding-top: 6px;
    margin-bottom: -6px;
    text-align: center;
  }
}

